<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp200"
        android:background="@color/ColorPrimary">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userImage"
            android:layout_width="@dimen/dp90"
            android:layout_height="@dimen/dp90"
            android:layout_centerInParent="true"
            android:src="@drawable/profile" />

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_12dp"
        android:layout_marginTop="@dimen/dimen_12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:hint="@string/name"
            android:text="Aditya " />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_12dp"
        android:layout_marginTop="@dimen/dimen_12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:hint="@string/number"
            android:text="8767670143" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_12dp"
        android:layout_marginTop="@dimen/dimen_12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:hint="@string/email"
            android:text="Aditya123@gmail " />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_12dp"
        android:layout_marginTop="@dimen/dimen_12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:hint="@string/city"
            android:text="U p " />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_12dp"
        android:layout_marginTop="@dimen/dp24"
        android:weightSum="2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editProfile"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:layout_weight="1"
            android:text="@string/edit_profile"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_weight="1"
            android:text="@string/logout"
            android:textAllCaps="false" />

    </LinearLayout>

</LinearLayout>