<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_300"
            android:background="@color/ColorPrimary"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_40dp"
                android:text="@string/let_s_know_you"
                android:textColor="@color/white"
                android:textSize="@dimen/sp22"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/please_provide_all_the_information"
                android:textColor="@color/white"
                android:textSize="@dimen/sp16" />

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/numberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_36dp"
            android:layout_marginTop="@dimen/dp_90_dp"
            android:layout_marginBottom="@dimen/dimen_12dp"
            android:elevation="@dimen/dp7"
            app:cardCornerRadius="@dimen/dimen_12dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/userImage"
                    android:layout_width="@dimen/dp90"
                    android:layout_height="@dimen/dp90"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/register_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/upload_image"
                    android:textColor="@color/black" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dimen_8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/name"
                        android:drawablePadding="@dimen/dimen_12dp"
                        android:hint="@string/name"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dimen_8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/gmail"
                        android:drawablePadding="@dimen/dimen_12dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dimen_8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/location"
                        android:drawablePadding="@dimen/dimen_12dp"
                        android:hint="@string/city"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/termsCondition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/terms_and_condition"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp12" />

                <TextView
                    android:id="@+id/saveData"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_40dp"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:background="@drawable/btn_bg"
                    android:gravity="center"
                    android:text="@string/next"
                    android:textColor="@color/white" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>