<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_lightGray"
    tools:context=".auth.LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_350dp"
        android:background="@color/teal_200"
        android:src="@drawable/login_dating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/numberLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_36dp"
        android:layout_marginTop="@dimen/dp_50_dp"
        android:elevation="@dimen/dp7"
        app:cardCornerRadius="@dimen/dimen_12dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_number" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen_8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/baseline_local_phone_24"
                    android:drawablePadding="@dimen/dimen_12dp"
                    android:hint="@string/number"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/sendOtp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/send_otp"
                android:textColor="@color/white" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/otpLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_36dp"
        android:layout_marginTop="-70dp"
        android:elevation="@dimen/dp7"
        android:visibility="gone"
        app:cardCornerRadius="@dimen/dimen_12dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_otp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen_8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userOtp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/baseline_local_phone_24"
                    android:drawablePadding="@dimen/dimen_12dp"
                    android:hint="@string/otp"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/verifyOtp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/verify_otp"
                android:textColor="@color/white" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>